# monsoon-bench

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yaml  pyproject.toml  run_tests.sh
.github/workflows/: main.yml
data/india_states_shapefile/: india_states.dbf
examples/: README.md
examples/demo_notebooks/: compare_models.ipynb  complete_package_walkthrough.ipynb  figure2.ipynb  figure5.ipynb  figures_2_and_5.ipynb  package_walkthrough.ipynb  researcher_use_case_benchmark.ipynb
examples/demo_notebooks/outputs/: climatology_spatial_metrics.csv  deterministic_spatial_metrics.csv  deterministic_spatial_metrics.json  probabilistic_spatial_metrics.csv
examples/exploratory_notebooks/: mae_far_mr_probabilistic.ipynb  onset_threshold_script_review.ipynb  realibility_digram_script_review.ipynb
examples/paper_figues/: fig14.ipynb  fig3.ipynb
examples/paper_figures/: fig1.ipynb  fig15.ipynb  fig4.ipynb  plot_config.py
monsoonbench/: README.md  __init__.py  _version.py
monsoonbench/cli/: main.py
monsoonbench/config/: __init__.py  loader.py
monsoonbench/data/: __init__.py  base.py  dataloader_quickstart.md  load_setup_README.md  loader.py  registry.py  utils_path.py
monsoonbench/data/data_shapefile/india_country_shapefile/: india_country.dbf  india_country.shp
monsoonbench/data/data_shapefile/india_states_shapefile/: india_states.shp  india_states.shx
monsoonbench/data/loaders/: __init__.py  deterministic.py  imd.py  probabilistic.py  threshold.py
monsoonbench/metrics/: __init__.py  base.py  climatology.py  deterministic.py  probabilistic.py
monsoonbench/onset/: __init__.py  detection.py
monsoonbench/spatial/: __init__.py  regions.py  shapefile_loader.py
monsoonbench/visualization/: README.md  __init__.py  compare_models.py  data_downloader.py  figure2.py  figures_2_and_5.py  spatial.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_cli_integration.py  test_probabilistic_climatology.py
tests/unit/: test_cli_main.py  test_config_loader.py  test_visualization_data_downloader.py
