
[project]
name = "monsoonbench"
requires-python = ">=3.12"
version = "0.1.1"
dependencies = [
  "pandas~=2.1",
  "python-dotenv~=1.0.0",
  "jupyterlab~=4.0.0",
  "ipykernel~=6.16",
  "ruff==0.7.2",
  "numpy>=2.0",
  "pre-commit~=3.5",
  "coverage~=7.3",
  "pytest~=7.4",
  "xarray>=2025.9.1",
  "dask>=2025.9.1",
  "h5netcdf>=1.6.4",
  "geopandas>=1.1.1",
  "matplotlib>=3.10.6",
  "zarr>=3.1.3",
  "scipy>=1.11.0"
]

[project.optional-dependencies]
netcdf4 = [
  "netCDF4>=1.7.2",
  "cftime>=1.6.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = [
  "examples/demo_notebooks/researcher_use_case_benchmark.ipynb",
]

[tool.ruff.lint]
extend-select = [
  # by default, ruff enables all F and a subset of E rules
  # for a description of rulesets and examples, see:
  # https://docs.astral.sh/ruff/rules/
  "ANN",    # flake8-annotations - type annotations, some ignored
  "B",      # bugbear - identifies likely bugs
  "C4",     # flake8-comprehensions - identifies redundant calls in comprehensions
  "D",      # pydocstyle - requires docstrings on all public modules/functions/classes
  "I",      # isort
  "N801",   # pep8-naming - enforce ClassNamesStyle
  "N804",   # pep8-naming - first arg of classmethod should be cls
  "N805",   # pep8-naming - first arg of method should be self
  "PD",     # pandas-vet
  "PLR2004",# Pylint no magic values!
  "PTH",    # prefer pathlib over os.path as seems to be the consensus
  "Q",      # flake8-quotes - double quotes preferred (like black)
  "S",      # flake8-bandit - security checks
  "UP",     # pyupgrade - requires preferred syntax in newer python versions
  "YTT",    # flake8-2020 - corrects code that doesn't anticipate 2 digit python minor version  
]

ignore = [
  "D415",   # allow first line of doctstrings to end without punctuation
  "ANN001", # missing type annotation for function argument (too strict)
  "ANN002", # missing type on *args
  "ANN003", # missing type on **kwargs
  "ANN205", # missing return type for staticmethod (too strict for existing code)
  "ANN202", # missing return type for private function
  "PD011",  # use .to_numpy() instead of .values (stylistic)
  "PLR2004",# magic values (too many in scientific code)
  "B905",   # won't work on python <3.10
  "PTH110", # relax PTH rules
  "PTH118", # relax PTH rules
  "ANN101", #Relax type rule for self
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",    # allow assert in tests
  "ANN001",  # don't require type annotations for test function args
  "ANN201",  # don't require return type annotations in tests
  "D100",    # don't require module docstrings in tests
  "D103",    # don't require function docstrings in tests
  "E702",    # allow multiple statements on one line in tests
  "F841",    # allow unused variables in tests
  "PTH103",  # allow os.makedirs in tests
  "PTH118",  # allow os.path.join in tests
  "PTH123",  # allow open() in tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"
